# ROADEF_challenge_2018_J5

./: .gitignore  README.md  grasp.cpp
Algo_exact/: Le DOCUMENT.ipynb  Le DOCUMENT.slides.html
Algo_exact/.ipynb_checkpoints/: Le DOCUMENT-checkpoint.ipynb
Algo_python/: geometry.py  glouton.py  glouton2.py  solutionA17Glouton.csv
Code/: CMakeCache.txt  CMakeLists.txt  Checker.cbp  Checker.cpp  Checker.h  GlassStack.h  GlassStructures.cpp  GlassStructures.h  GlobalVar.h  Parse.cpp  Parser.cpp  Parser.h  algorithm.cpp  algorithm.h  build_data.cpp  build_data.h  builddata.cpp  builddata.h  checker  checker.cpp  checker.h  class_initialization.cpp  class_initialization.h  classinitialization.cpp  classinitialization.h  glass_defect.cpp  glass_defect.h  glass_item.cpp  glass_item.h  glass_node.cpp  glass_node.h  glass_plate.cpp  glass_plate.h  glass_stack.cpp  glass_stack.h  global_var.cpp  global_var.h  globalvar.cpp  greedy.cpp  greedy.cpp.autosave  (+10 more)
CodeDiversPython/.ipynb_checkpoints/: Contrainte d'ordre-checkpoint.ipynb
Code_cpp/: CMakeLists.txt  glass_algorithm.cpp  glass_defect.h  glass_node.cpp  glass_plate.cpp  glass_structure.h  instance.h  location.cpp  main.cpp  tmp.txt
Code_cpp/src/: CMakeLists.txt
Code_cpp/src/GlassCutter/: CMakeLists.txt  glassCut.cpp  glassCut.h  glassCutter.cpp  glassCutter.h  glassLocation.cpp  glassLocation.h  glassNode.cpp  glassNode.h  glassStack.cpp  glassStack.h  redMonster.cpp  redMonster.h  redPoint.cpp  redPoint.h
Code_cpp/src/GlassData/: CMakeLists.txt  glassConstants.h  glassDefect.cpp  glassDefect.h  glassInstance.cpp  glassInstance.h  glassItem.cpp  glassItem.h  glassPlate.cpp  glassPlate.h
Code_cpp/src/GlassKernel/: CMakeLists.txt  glassMove.cpp  glassMove.h  glassRand.h  heuristic.cpp  heuristic.h  main.cpp  mainTest.cpp
Code_cpp/src/GlassKernel/GlassMoves/: kConsecutivePermutation.cpp  kConsecutivePermutation.h  kInsert.cpp  kInsert.h  kPermutation.cpp  kPermutation.h  swap.cpp  swap.h
Code_cpp_old/: .gitignore  CMakeLists.txt  glass_algorithm.cpp  glass_algorithm.h  glass_cut.cpp  glass_cut.h  glass_defect.cpp  glass_item.cpp  glass_item.h  glass_node.cpp  glass_node.h  glass_plate.cpp  glass_plate.h  glass_stack.cpp  glass_stack.h  glass_structure.cpp  glass_structure.h  instance.cpp  instance.h  location.h  main.cpp  red_monster.cpp  red_monster.h  red_point.cpp  red_point.h
Codes_auxiliaires_python/: Contrainte d'ordre.ipynb
Codes_auxiliaires_python/benchmark/: benchmark.py
Codes_auxiliaires_python/draw_locations/: .gitignore  A2_119.txt  draw_locations.py  infeasible.txt  output1.txt  output10.txt  output11.txt  output12.txt  output13.txt  output14.txt  output3.txt  output4.txt  output5.txt  output6.txt  output7.txt  output8.txt  output9.txt  remove_infeasible  tmp.txt
Datasets/dataset_A/: .~lock.A1_defects.csv#  A11_solution.csv  A2_batch.csv  A6_solution.csv  A9_batch.csv  visualisation_defauts.py
Documents/: .gitignore  Remarques.tex  biblio.bib  note_qualif.aux  note_qualif.fdb_latexmk  note_qualif.fls  note_qualif.out  note_qualif.tex  notes_final.tex
Proto_python_industriel/: defect.py  emplacement.py  etoile_verte.py  greedy.py  instance.py  item.py  main.py  monstre_rouge.py  node.py  point_rouge.py  solution.py  stack.py  tree.py  tree_search.py
Proto_sprint_python/: Le DOCUMENT.html  Le DOCUMENT.ipynb
Proto_sprint_python/.ipynb_checkpoints/: Le DOCUMENT-checkpoint.ipynb
Sprint (copie)/: A12_12505054_solution.csv  A13_69582993_solution.csv  A19_14876534_solution.csv  A1_852416_solution.csv  A4_13944660_solution.csv  A8_28027364_solution.csv
Sprint-J5/: A15_solution.csv  A17_solution.csv  A5_solution.csv  A7_solution.csv
checker/: CMakeCache.txt  GlassNode.h  checker  checker.cbp  checker.depend  checker.layout  cmake_install.cmake  readme.txt
checker/include_files/: main.h
checker/instances_checker/glouton_results/: A17_solution.csv
checker/src/: GlassStack.cpp  main.cpp
checker_deprecated/: CMakeCache.txt  CMakeLists.txt  GlassDefect.h  GlassItem.h  GlassNode.cpp  GlassPlate.cpp  Makefile  logs\0_log.txt  logs\0_statistics.csv  logs\A0_log.txt  logs\A0_statistics.csv  main.cpp  readme.txt
checker_deprecated/instances_checker/: A6_solution.csv  global_param.csv
checker_deprecated/instances_checker/glouton_results/: A17_solution.csv
checker_deprecated/visualization/js/: read-csv.js
checker_instances/: checker
checker_instances/instances_checker/: .A0_defects.csv.swp  .~lock.A0_defects.csv#  .~lock.A15_batch.csv#  .~lock.A1_batch.csv#  .~lock.A2_batch.csv#  A0_899226_solution.csv  A10_28255681_solution.csv  A10_29154481_solution.csv  A10_30027601_solution.csv  A10_31054801_solution.csv  A10_31799521_solution.csv  A10_32155831_solution.csv  A10_33263281_solution.csv  A10_33520081_solution.csv  A10_34133191_solution.csv  A10_34547281_solution.csv  A10_39169681_solution.csv  A10_42164611_solution.csv  A11_22922359_solution.csv  A11_23410279_solution.csv  A11_24126109_solution.csv  A11_24418219_solution.csv  A11_25522459_solution.csv  A11_27271909_solution.csv  A11_27564019_solution.csv  A11_29971519_solution.csv  A11_30446599_solution.csv  A11_40362289_solution.csv  A11_solution_40147219.csv  A12_12505054_solution.csv  A12_12761854_solution.csv  A12_13124584_solution.csv  A12_13564354_solution.csv  A12_13583614_solution.csv  A12_13824364_solution.csv  A12_14158204_solution.csv  A12_14382904_solution.csv  A12_14466364_solution.csv  A12_14597974_solution.csv  A12_14601184_solution.csv  (+264 more)
checker_instances/logs/: A1_log.txt  A1_statistics.csv  A3_log.txt  A3_statistics.csv  A4_log.txt  A4_statistics.csv
checker_instances/visualization/js/: read-csv.js
private/Qualification-J5/: .~lock.Results.ods#  Results.ods
private/Qualification-J5/Solutions_180s/: A10_solution.csv  A11_solution.csv  A14_solution.csv  A15_solution.csv  A16_solution.csv  A17_solution.csv  A19_solution.csv  A20_solution.csv  A4_solution.csv  A5_solution.csv  A6_solution.csv  A7_solution.csv  A8_solution.csv
private/Sprint-J5/: A14_solution.csv  A18_solution.csv  A20_solution.csv
