cmake_minimum_required(VERSION 2.6)

project(ROADEF)
add_executable(toukeute
    main.cpp
    builddata.cpp
    Checker.cpp
    classinitialization.cpp
    GlassStructures.cpp
    globalvar.cpp
    Parser.cpp
    results.cpp
    builddata.h
    Checker.h
    classinitialization.h
    GlassStructures.h
    GlobalVar.h
    Parser.h
    results.h
    )
