cmake_minimum_required(VERSION 2.6)

set(CMAKE_CXX_FLAGS "-Wall -Wextra -std=c++11")
project(ROADEF)

add_executable(toukeute
    main.cpp
    #build_data.h
    #build_data.cpp
    #checker.h
    #checker.cpp
    class_initialization.h
    class_initialization.cpp
    global_var.h
    global_var.cpp
    parser.h
    parser.cpp
    #results.h
    #results.cpp
    glass_defect.h
    glass_defect.cpp
    glass_item.h
    glass_item.cpp
    glass_node.h
    glass_node.cpp
    glass_plate.h
    glass_plate.cpp
    glass_stack.h
    glass_stack.cpp
    algorithm.h
    algorithm.cpp
    greedy.h
    greedy.cpp
    heuristic.h
    heuristic.cpp
)

add_executable(tests
    tests.cpp
    #build_data.h
    #build_data.cpp
    #checker.h
    #checker.cpp
    class_initialization.h
    class_initialization.cpp
    global_var.h
    global_var.cpp
    parser.h
    parser.cpp
    #results.h
    #results.cpp
    glass_defect.h
    glass_defect.cpp
    glass_item.h
    glass_item.cpp
    glass_node.h
    glass_node.cpp
    glass_plate.h
    glass_plate.cpp
    glass_stack.h
    glass_stack.cpp
    algorithm.h
    algorithm.cpp
    greedy.h
    greedy.cpp
    heuristic.h
    heuristic.cpp
)
